--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 FIND_PACKAGE(LibEV REQUIRED)
 FIND_PACKAGE (Threads REQUIRED)
 
-INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src)
-INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/io)
-INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/log)
-INCLUDE_DIRECTORIES (${PROCTOR_SOURCE_DIR}/src/messagequeue)
+INCLUDE_DIRECTORIES (${SPEEDO_SOURCE_DIR}/src)
+INCLUDE_DIRECTORIES (${SPEEDO_SOURCE_DIR}/src/io)
+INCLUDE_DIRECTORIES (${SPEEDO_SOURCE_DIR}/src/log)
+INCLUDE_DIRECTORIES (${SPEEDO_SOURCE_DIR}/src/messagequeue)
 
 ADD_SUBDIRECTORY (io)
 ADD_SUBDIRECTORY (protocol)
@@ -14,15 +14,15 @@ LINK_LIBRARIES (ev)
 
 
 
-# LINK_DIRECTORIES (${PROCTOR_BINARY_DIR}/src/io) 
+# LINK_DIRECTORIES (${SPEEDO_BINARY_DIR}/src/io) 
 
-ADD_EXECUTABLE (proctor Main.cpp)
+ADD_EXECUTABLE (speedo Main.cpp)
 
 
-TARGET_LINK_LIBRARIES (proctor io ev protocol ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
+TARGET_LINK_LIBRARIES (speedo io ev protocol ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
 
 IF(ENABLE_GPERF_TOOLS MATCHES "ON")
-    TARGET_LINK_LIBRARIES(proctor profiler)
-    TARGET_LINK_LIBRARIES(proctor tcmalloc)
+    TARGET_LINK_LIBRARIES(speedo profiler)
+    TARGET_LINK_LIBRARIES(speedo tcmalloc)
 ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
 
